--- a/src/contact.html
+++ b/src/contact.html
@@ -42,9 +42,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -54,7 +54,7 @@
 
       <div class="starter-template">
         <h1>Welcome to The Quilted Lilly</h1>
-        <p class="lead">Here are a few examples of previous quilts I have made.<br> If you like what you see feel free to contact me to place an order!</p>
+        <p class="lead">Email: not@real.com<br> Phone: 111-111-1111</p>
       </div>
 
     </div><!-- /.container -->
