Adding fake images

--- a/src/contact.html
+++ b/src/contact.html
@@ -53,7 +53,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Welcome to The Quilted Lilly</h1>
+        <h1>Contact Information</h1>
         <p class="lead">Email: not@real.com<br> Phone: 111-111-1111</p>
       </div>
 
