--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,9 @@
       <div class="starter-template">
         <h1>Welcome to The Quilted Lilly</h1>
         <p class="lead">Here are a few examples of previous quilts I have made.<br> If you like what you see feel free to contact me to place an order!</p>
+         <img src="images/quilt1.jpg" alt="Quilt1" width="304" height="236"> 
+         <img src="images/quilt2.jpg" alt="Quilt2" width="304" height="236"> 
+         <img src="images/quilt3.jpg" alt="Quilt3" width="304" height="236"> 
       </div>
 
     </div><!-- /.container -->
