--- a/src/about.html
+++ b/src/about.html
@@ -53,7 +53,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Welcome to The Quilted Lilly</h1>
+        <h1>About The Quilted Lilly</h1>
         <p class="lead">My name is Gerri Lilly.<br> If you like what you see feel free to contact me to place an order!</p>
       </div>
 
